# AlpacaGeometry

./: LICENSE  README.md  alpaca-geometry.cabal  baseline.bench  game-geometry.cabal  stack.yaml  v2u_pol_unpack.bench
bench/: MainBenchmarkSuite.hs
src/: GameGeometry.hs  Utils.hs
src/Alpaca/: Geo.hs  HMath.hs
src/Alpaca/Geo/: Classes.hs  Dir.hs  HMath.hs  Line.hs  P2.hs  Prim.hs  Rad.hs  Transform.hs  V2.hs
src/Alpaca/Geo/Prim/: AABox.hs  Circle.hs  Classes.hs  ConvexPolygon.hs  Line.hs  P2.hs  Ray.hs  V2.hs
src/Geometry/: BVH.hs  Geometry.hs  Shadows.hs
test/: Spec.hs
