name:                alpaca-geometry
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/AlpacaGeometry#readme
license:             BSD3
license-file:        LICENSE
author:              David Eichmann
maintainer:          example@example.com
copyright:           2016 David Eichmann
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Alpaca.Geo
                       Alpaca.Geo.HMath
                       Alpaca.Geo.Rad
                       Alpaca.Geo.Transform
                       Alpaca.Geo.Prim
  other-modules:
                       Alpaca.Geo.Prim.Classes
                       Alpaca.Geo.Prim.P2
                       Alpaca.Geo.Prim.V2
                       Alpaca.Geo.Prim.Line
                       Alpaca.Geo.Prim.AABox
                       Alpaca.Geo.Prim.Circle
                       Alpaca.Geo.Prim.ConvexPolygon
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -O2
                       -fllvm

-- test-suite AlpacaGeometry-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , alpaca-geometry
--                      , tasty
--                      , tasty-hunit
--                      , tasty-quickcheck
--                      , QuickCheck
--                      , deepseq
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010
--
-- benchmark AlpacaGeometry-bench
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             MainBenchmarkSuite.hs
--   build-depends:       base,
--                        criterion
--                      , QuickCheck
--                      , deepseq
--                      , vector
--                      , random
--                      , alpaca-geometry
--   ghc-options:         -Wall
--                        -O2
--                        -fllvm
